+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's new in Python 3.0b1?
===========================

*Release date: XX-June-2008*

Core and Builtins
-----------------

- Issue 2801: fix bug in the float.is_integer method where a ValueError
  was sometimes incorrectly raised.

Extension Modules
-----------------

Library
-------

- The Decimal module gained the magic methods __round__, __ceil__,
  __floor__ and __trunc__, to give support for round, math.ceil,
  math.floor and math.trunc.

- The user module has been removed.

- The mutex module has been removed.

- The imputil module has been removed.

- os.path.walk has been removed in favor of os.walk

Build
-----


What's New in Python 3.0a5?
===========================

*Release date: 08-May-2008*

Core and Builtins
-----------------

- Fix misbehaviour of PyLong_FromSsize_t on systems where sizeof(size_t) >
  sizeof(long).

- Issue #2221: Corrected a SystemError "error return without exception set",
  when the code executed by exec() raises an exception, and sys.stdout.flush()
  also raises an error.

- Bug #2565: The repr() of type objects now calls them 'class', 
  not 'type' - whether they are builtin types or not.

- The command line processing was converted to pass Unicode strings
  through as unmodified as possible; as a consequence, the C API
  related to command line arguments was changed to use wchar_t.

- All backslashes in raw strings are interpreted literally.  This means that
  '\u' and '\U' escapes are not treated specially.

Extension Modules
-----------------

Library
-------

- ctypes objects now support the PEP3118 buffer interface

- Issue #2682: ctypes callback functions now longer contain a cyclic
  reference to themselves.

- Issue #2058: Remove the buf attribute and add __slots__ to the TarInfo
  class in order to reduce tarfile's memory usage.

- Bug #2606: Avoid calling .sort() on a dict_keys object.
